force-app/main/default/objects/Activity_Budget_Split__c/Activity_Budget_Split__c.object-meta.xml
<CustomObject>
    <label>Activity Budget Split</label>
    <nameField>
        <displayFormat>ABS-{0000000}</displayFormat>
        <label>Activity Budget Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Budget Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>