force-app/main/default/objects/Activity_Budget_Split__c/fields/Financial_plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_plan_Type__c</fullName>
    <inlineHelpText>Financial forecast type..</inlineHelpText>
    <label>Financial plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Budget</fullName>
                <default>true</default>
                <label>Business Budget</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>