force-app/main/default/objects/Activity_Budget_Split__c/fields/Marketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity__c</fullName>
    <label>Marketing Activity</label>
    <referenceTo>Marketing_Activity__c</referenceTo>
    <relationshipLabel>Activity Budget Splits</relationshipLabel>
    <relationshipName>Activity_Budget_Splits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>