force-app/main/default/objects/Activity_Budget_Split__c/fields/Split_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Split_End_Date__c</fullName>
    <label>Split End Date</label>
    <type>Date</type>
</CustomField>