force-app/main/default/objects/Activity_Budget_Split__c/fields/Split_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Split_Start_Date__c</fullName>
    <label>Split Start Date</label>
    <type>Date</type>
</CustomField>