force-app/main/default/objects/Activity_Budget_Split__c/fields/Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget__c</fullName>
    <formula>X01_January__c  +  X02_Febraury__c +  X03_March__c +  X04_April__c +  X05_May__c +  X06_June__c +  X07_July__c +  X08_August__c +  X09_September__c +  X10_October__c +  X11_November__c +  X12_December__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total sum of all the months of activity</inlineHelpText>
    <label>Total Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>