force-app/main/default/objects/Activity_Budget_Split__c/fields/X01_January__c.field-meta.xml
<CustomField>
    <fullName>X01_January__c</fullName>
    <label>01.January</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>