force-app/main/default/objects/Activity_Budget_Split__c/fields/X02_Febraury__c.field-meta.xml
<CustomField>
    <fullName>X02_Febraury__c</fullName>
    <label>02.Febraury</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>