force-app/main/default/objects/Activity_Budget_Split__c/fields/X03_March__c.field-meta.xml
<CustomField>
    <fullName>X03_March__c</fullName>
    <label>03.March</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>