force-app/main/default/objects/Activity_Budget_Split__c/fields/X04_April__c.field-meta.xml
<CustomField>
    <fullName>X04_April__c</fullName>
    <label>04.April</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>