force-app/main/default/objects/Activity_Budget_Split__c/fields/X05_May__c.field-meta.xml
<CustomField>
    <fullName>X05_May__c</fullName>
    <label>05.May</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>