force-app/main/default/objects/Activity_Budget_Split__c/fields/X06_June__c.field-meta.xml
<CustomField>
    <fullName>X06_June__c</fullName>
    <label>06.June</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>