force-app/main/default/objects/Activity_Budget_Split__c/fields/X07_July__c.field-meta.xml
<CustomField>
    <fullName>X07_July__c</fullName>
    <label>07.July</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>