force-app/main/default/objects/Activity_Budget_Split__c/fields/X08_August__c.field-meta.xml
<CustomField>
    <fullName>X08_August__c</fullName>
    <label>08.August</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>