force-app/main/default/objects/Activity_Budget_Split__c/fields/X09_September__c.field-meta.xml
<CustomField>
    <fullName>X09_September__c</fullName>
    <label>09.September</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>