force-app/main/default/objects/Activity_Budget_Split__c/fields/X10_October__c.field-meta.xml
<CustomField>
    <fullName>X10_October__c</fullName>
    <label>10.October</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>