force-app/main/default/objects/Activity_Budget_Split__c/fields/X11_November__c.field-meta.xml
<CustomField>
    <fullName>X11_November__c</fullName>
    <label>11.November</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>