force-app/main/default/objects/Activity_Budget_Split__c/fields/X12_December__c.field-meta.xml
<CustomField>
    <fullName>X12_December__c</fullName>
    <label>12.December</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>