force-app/main/default/objects/Activity_Budget_Split__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Marketing_Activity__c</columns>
    <columns>Split_Start_Date__c</columns>
    <columns>Split_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>